--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "require-dev": {
         "phpunit/phpunit": "^6.5",
         "codedungeon/phpunit-result-printer": "0.8.2",
-        "symfony/var-dumper": "^3.4"
+        "symfony/var-dumper": "^3.4",
+        "squizlabs/php_codesniffer": "^3.2"
     }
 }
