removed hhvm from travis

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "jworksuk/pdo-connection",
+    "name": "jworksuk/extra-pdo",
     "authors": [
         {
             "name": "Jesse James",
